--- a/Contact_style.css
+++ b/Contact_style.css
@@ -1,41 +1,61 @@
-<!DOCTYPE html>
-<html>
-<title>CodeClause_Project-2</title>
-<head>
-    <link rel="stylesheet" type="text/css" href="Contact_Style.css">
-</head>
 
-<body>
-    <fieldset>
-    <div class="center">
-            <form>
-                <h1>!! Contact form with Captcha !!</h1>
-                <br/><br/><br/>
-                <h3>
-                Firstname * <input type="text" name="Name" placeholder="First name" required="required">
-                Lastname * <input type="text" name="Surname" placeholder="Last name" required="required"/>
-                <br/><br/><br/>
-                Email * <input id="form_email" type="email" name="email" placeholder="Please enter your email *" required="required" data-error="Valid email is required.">
-                Phone <input type="tel" name="phone" placeholder="Please enter your phone">
-                <br/><br/><br/>
-                WhatsApp Number <input type="tel" name="phone" placeholder="Please enter your Whatsapp no.">
-                <br/><br/><br/>
-                Message <textarea> </textarea>
-                <br/><br/>
-                </h3>
-            
-        <div id="captchaBackground">
-            <canvas id="captcha">captcha text</canvas>
-            <input id="textBox" type="text" name="text">
-            <div id="buttons">
-                <input id="submitButton" type="submit">
-                <button id="refreshButton" type="submit">Refresh</button>
-            </div>
-            <span id="output"></span>
-        </div>
-    </div>
-    </fieldset> 
-    <script src="Contact_script.js"></script>
-</body>
 
-</html>
+body {
+    background-color: rgb(219, 208, 208);
+    font-family: 'Roboto', sans-serif;
+}
+
+#captchaBackground {
+    height: 220px;
+    width: 250px;
+    background-color: grey;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+#captcha {
+    height: 70%;
+    width: 70%;
+    font-size: 30px;
+    letter-spacing: 3px;
+    margin: auto;
+    display: block;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
+.center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#submitButton {
+    margin-top: 2em;
+    margin-bottom: 2em;
+    background-color: #2fb3c2;
+    border: 0px;
+    font-weight: bold;
+}
+
+#refreshButton {
+    background-color: #2fb3c2;
+    border: 0px;
+    font-weight: bold;
+}
+
+#textBox {
+    height: 30px;
+}
+
+.incorrectCaptcha {
+    color: #FF0000;
+}
+
+.correctCaptcha {
+    color: #7FFF00;
+}
